--- a/restaurants/le-delice-des-sens.html
+++ b/restaurants/le-delice-des-sens.html
@@ -40,25 +40,34 @@
                     </div>
                     <div class="menu__carte__container">
                         <div class="menu__carte__element menu__carte__element--1">
-                            <h2>Tartare de thon</h2>
-                            <div class="menu__carte__element__bottom">
-                                <p>Assaisonné au yuzu</p>
-                                <h4>25€</h4>
+                            <div class="menu__carte__element__column">
+                                <h2>Tartare de thon</h2>
+                                <div class="menu__carte__element__bottom">
+                                    <p>Assaisonné au yuzu</p>
+                                    <h4>25€</h4>
+                                </div>
                             </div>
+                            <div class="checked"><i class="fa-solid fa-circle-check"></i></div>
                         </div>
                         <div class="menu__carte__element menu__carte__element--2">
-                            <h2>Bouchée de homard croustillant</h2>
-                            <div class="menu__carte__element__bottom">
-                                <p>Et sa farandole de petits légumes</p>
-                                <h4>35€</h4>
+                            <div class="menu__carte__element__column">
+                                <h2>Bouchée de homard croustillant</h2>
+                                <div class="menu__carte__element__bottom">
+                                    <p>Et sa farandole de petits légumes</p>
+                                    <h4>35€</h4>
+                                </div>
                             </div>
+                            <div class="checked"><i class="fa-solid fa-circle-check"></i></div>
                         </div>
                         <div class="menu__carte__element menu__carte__element--3">
-                            <h2>Velouté de cèpes</h2>
-                            <div class="menu__carte__element__bottom">
-                                <p>Aux truffes</p>
-                                <h4>20€</h4>
+                            <div class="menu__carte__element__column">
+                                <h2>Velouté de cèpes</h2>
+                                <div class="menu__carte__element__bottom">
+                                    <p>Aux truffes</p>
+                                    <h4>20€</h4>
+                                </div>
                             </div>
+                            <div class="checked"><i class="fa-solid fa-circle-check"></i></div>
                         </div>
                     </div>
                 </div>
@@ -69,25 +78,34 @@
                     </div>
                     <div class="menu__carte__container">
                         <div class="menu__carte__element menu__carte__element--4">
-                            <h2>Poulet rôti aux herbes de Provence</h2>
-                            <div class="menu__carte__element__bottom">
-                                <p>Et sa crème de truffe</p>
-                                <h4>40€</h4>
+                            <div class="menu__carte__element__column">
+                                <h2>Poulet rôti aux herbes de Provence</h2>
+                                <div class="menu__carte__element__bottom">
+                                    <p>Et sa crème de truffe</p>
+                                    <h4>40€</h4>
+                                </div>
                             </div>
+                            <div class="checked"><i class="fa-solid fa-circle-check"></i></div>
                         </div>
                         <div class="menu__carte__element menu__carte__element--5">
-                            <h2>Langouste rôtie</h2>
-                            <div class="menu__carte__element__bottom">
-                                <p>Et ses légumes de saison</p>
-                                <h4>35€</h4>
+                            <div class="menu__carte__element__column">
+                                <h2>Langouste rôtie</h2>
+                                <div class="menu__carte__element__bottom">
+                                    <p>Et ses légumes de saison</p>
+                                    <h4>35€</h4>
+                                </div>
                             </div>
+                            <div class="checked"><i class="fa-solid fa-circle-check"></i></div>
                         </div>
                         <div class="menu__carte__element menu__carte__element--6">
-                            <h2>Côte de boeuf Angus</h2>
-                            <div class="menu__carte__element__bottom">
-                                <p>Et sa purée de panais</p>
-                                <h4>44€</h4>
+                            <div class="menu__carte__element__column">
+                                <h2>Côte de boeuf Angus</h2>
+                                <div class="menu__carte__element__bottom">
+                                    <p>Et sa purée de panais</p>
+                                    <h4>44€</h4>
+                                </div>
                             </div>
+                            <div class="checked"><i class="fa-solid fa-circle-check"></i></div>
                         </div>
                     </div>
                 </div>
@@ -98,25 +116,34 @@
                     </div>
                     <div class="menu__carte__container">
                         <div class="menu__carte__element menu__carte__element--7">
-                            <h2>Farandole de desserts</h2>
-                            <div class="menu__carte__element__bottom">
-                                <p>Du chef</p>
-                                <h4>18€</h4>
+                            <div class="menu__carte__element__column">
+                                <h2>Farandole de desserts</h2>
+                                <div class="menu__carte__element__bottom">
+                                    <p>Du chef</p>
+                                    <h4>18€</h4>
+                                </div>
                             </div>
+                            <div class="checked"><i class="fa-solid fa-circle-check"></i></div>
                         </div>
                         <div class="menu__carte__element menu__carte__element--8">
-                            <h2>Crème brulée</h2>
-                            <div class="menu__carte__element__bottom">
-                                <p>Revisité</p>
-                                <h4>22€</h4>
+                            <div class="menu__carte__element__column">
+                                <h2>Crème brulée</h2>
+                                <div class="menu__carte__element__bottom">
+                                    <p>Revisité</p>
+                                    <h4>22€</h4>
+                                </div>
                             </div>
+                            <div class="checked"><i class="fa-solid fa-circle-check"></i></div>
                         </div>
                         <div class="menu__carte__element menu__carte__element--9">
-                            <h2>Tiramisu</h2>
-                            <div class="menu__carte__element__bottom">
-                                <p>À la noisette</p>
-                                <h4>23€</h4>
+                            <div class="menu__carte__element__column">
+                                <h2>Tiramisu</h2>
+                                <div class="menu__carte__element__bottom">
+                                    <p>À la noisette</p>
+                                    <h4>23€</h4>
+                                </div>
                             </div>
+                            <div class="checked"><i class="fa-solid fa-circle-check"></i></div>
                         </div>
                     </div>
                 </div>
