--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </div>
         </section>
         <main>
-            <section id="introduction">
+            <section id="introduction" class="introduction">
                 <div class="intro">
                     <h1 class="intro__title">Réservez le menu qui vous convient</h1>
                     <h3 class="intro__subtitle">Découvrez des restaurants d'exception, sélectionnés par nos soins</h3>
