--- a/restaurants/la-note-enchantee.html
+++ b/restaurants/la-note-enchantee.html
@@ -11,7 +11,7 @@
     <body>
         <section id="header">
             <header class="header">
-                <a href="/OCR-Projet3"><i class="fa-solid fa-arrow-left header__icon"></i></a>
+                <a class="header__a-icon" href="/OCR-Projet3"><i class="fa-solid fa-arrow-left header__icon"></i></a>
                 <a href="/OCR-Projet3"><img class="header__img" src="../public/images/logo/ohmyfood.png" alt="Ohmyfood"></a>
             </header>
         </section>
