Ajout prefixed CSS & résolution bugs pour cert W3C

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
         <meta http-equiv="Content-type" content="text/html; charset=utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./public/css/normalize.css">
-        <link rel="stylesheet" href="./public/css/style.css">
+        <link rel="stylesheet" href="./public/css/prefixed/style.css">
         <script src="https://kit.fontawesome.com/76165e89d2.js" crossorigin="anonymous"></script>
         <title>Projet 3 - Lucas Lefort</title>
     </head>
     <body>
         <div class="loader"><div class="table-set">
-            <svg class="fork "version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+            <svg class="fork" version="1.1" id="fork" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 511 511" style="enable-background:new 0 0 511 511;" xml:space="preserve">
 <path d="M303.5,0c-4.142,0-7.5,3.358-7.5,7.5v104c0,4.687-3.813,8.5-8.5,8.5s-8.5-3.813-8.5-8.5V7.5c0-4.142-3.358-7.5-7.5-7.5
 	S264,3.358,264,7.5v104c0,4.687-3.813,8.5-8.5,8.5s-8.5-3.813-8.5-8.5V7.5c0-4.142-3.358-7.5-7.5-7.5S232,3.358,232,7.5v104
@@ -27,7 +27,7 @@
 	c2.997,0,5.862-0.57,8.5-1.597v13.083C296,153.938,289.938,160,282.452,160z"/>
 </svg>
   
-  <svg class="plate" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+  <svg class="plate" version="1.1" id="plate" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 288.643 288.643" style="enable-background:new 0 0 288.643 288.643;" xml:space="preserve">
 <g>
 	<circle style="fill:#9356DC;" cx="144.321" cy="144.322" r="136.821"/>
@@ -42,7 +42,7 @@
 	</g>
   </svg>
   
-  <svg class="knife" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+  <svg class="knife" version="1.1" id="knife" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 59 59" style="enable-background:new 0 0 59 59;" xml:space="preserve">
 <g>
 	<circle cx="28.994" cy="35" r="1"/>
