--- a/restaurants/la-note-enchantee.html
+++ b/restaurants/la-note-enchantee.html
@@ -4,7 +4,7 @@
         <meta http-equiv="Content-type" content="text/html; charset=utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="../public/css/normalize.css">
-        <link rel="stylesheet" href="../public/css/style.css">
+        <link rel="stylesheet" href="../public/css/prefixed/style.css">
         <script src="https://kit.fontawesome.com/76165e89d2.js" crossorigin="anonymous"></script>
         <title>Projet 3 - Lucas Lefort</title>
     </head>
