Adaptations et finalisation suite au mentorat

--- a/restaurants/le-delice-des-sens.html
+++ b/restaurants/le-delice-des-sens.html
@@ -19,19 +19,7 @@
             <div class="menu__container">
                 <div class="menu__title">
                     <h1>Le délice des sens</h1>
-                    <svg id="heart1" class='menu__icon' xmlns="http://www.w3.org/2000/svg" version="1.1" width="40" height="40" viewBox="0 0 500 500">
-                        <defs>
-                            <linearGradient id="gradient1" x1="0%" y1="100%" x2="0%" y2="0%">
-                                <stop class="color1" offset="0" stop-color="#9356DC">
-                                    <animate attributeName="offset" begin="heart1.click" dur="1s"  fill="freeze" from="0" to="1" />
-                                </stop>
-                                <stop class="color2" offset="0" stop-color="#F6F6F6">
-                                    <animate attributeName="offset" begin="heart1.click" dur="1s"  fill="freeze" from="0" to="1" />
-                                </stop>
-                            </linearGradient>
-                        </defs>
-                        <path fill="url(#gradient1)" d="M340.8,98.4c50.7,0,91.9,41.3,91.9,92.3c0,26.2-10.9,49.8-28.3,66.6L256,407.1L105,251.6c-15.8-16.6-25.6-39.1-25.6-63.9 c0-51,41.1-92.3,91.9-92.3c38.2,0,70.9,23.4,84.8,56.8C269.8,121.9,302.6,98.4,340.8,98.4"/>
-                    </svg>
+                    <i class="fa-regular fa-heart"></i>
                 </div>
                 <div class="menu__carte">
                     <div class="menu__subtitle">
