--- a/index.html
+++ b/index.html
@@ -93,19 +93,9 @@
                                 <h4 class="restaurant__text__subtitle">Ménilmontant</h4>
                             </div>
                         </a>
-                        <svg id="heart1" class='restaurant__icon' xmlns="http://www.w3.org/2000/svg" version="1.1" width="60" height="48" viewBox="0 0 500 500">
-                            <defs>
-                                <linearGradient id="gradient1" x1="0%" y1="100%" x2="0%" y2="0%">
-                                    <stop class="color1" offset="0" stop-color="#9356DC">
-                                        <animate attributeName="offset" begin="heart1.click" dur="1s"  fill="freeze" from="0" to="1" />
-                                    </stop>
-                                    <stop class="color2" offset="0" stop-color="#FFF">
-                                        <animate attributeName="offset" begin="heart1.click" dur="1s"  fill="freeze" from="0" to="1" />
-                                    </stop>
-                                </linearGradient>
-                            </defs>
-                            <path fill="url(#gradient1)" d="M340.8,98.4c50.7,0,91.9,41.3,91.9,92.3c0,26.2-10.9,49.8-28.3,66.6L256,407.1L105,251.6c-15.8-16.6-25.6-39.1-25.6-63.9 c0-51,41.1-92.3,91.9-92.3c38.2,0,70.9,23.4,84.8,56.8C269.8,121.9,302.6,98.4,340.8,98.4"/>
-                        </svg>
+                        <div class="restaurant__icon">
+                            <i class="fa-regular fa-heart"></i>
+                        </div>
                     </div>
                     <div class="restaurant">
                         <a class="restaurant__link" href="./restaurants/la-note-enchantee.html">
@@ -116,19 +106,9 @@
                                 <h4 class="restaurant__text__subtitle">Charonne</h4>
                             </div>
                         </a>
-                        <svg id="heart2" class='restaurant__icon' xmlns="http://www.w3.org/2000/svg" version="1.1" width="60" height="48" viewBox="0 0 500 500">
-                            <defs>
-                                <linearGradient id="gradient2" x1="0%" y1="100%" x2="0%" y2="0%">
-                                    <stop class="color1" offset="0" stop-color="#9356DC">
-                                        <animate attributeName="offset" begin="heart2.click" dur="1s"  fill="freeze" from="0" to="1" />
-                                    </stop>
-                                    <stop class="color2" offset="0" stop-color="#FFF">
-                                        <animate attributeName="offset" begin="heart2.click" dur="1s"  fill="freeze" from="0" to="1" />
-                                    </stop>
-                                </linearGradient>
-                            </defs>
-                            <path fill="url(#gradient2)" d="M340.8,98.4c50.7,0,91.9,41.3,91.9,92.3c0,26.2-10.9,49.8-28.3,66.6L256,407.1L105,251.6c-15.8-16.6-25.6-39.1-25.6-63.9 c0-51,41.1-92.3,91.9-92.3c38.2,0,70.9,23.4,84.8,56.8C269.8,121.9,302.6,98.4,340.8,98.4"/>
-                        </svg>
+                        <div class="restaurant__icon">
+                            <i class="fa-regular fa-heart"></i>
+                        </div>
                     </div>
                     <div class="restaurant">
                         <a class="restaurant__link" href="./restaurants/a-la-francaise.html">
@@ -138,19 +118,9 @@
                                 <h4 class="restaurant__text__subtitle">Cité Rouge</h4>
                             </div>
                         </a>
-                        <svg id="heart3" class='restaurant__icon' xmlns="http://www.w3.org/2000/svg" version="1.1" width="60" height="48" viewBox="0 0 500 500">
-                            <defs>
-                                <linearGradient id="gradient3" x1="0%" y1="100%" x2="0%" y2="0%">
-                                    <stop class="color1" offset="0" stop-color="#9356DC">
-                                        <animate attributeName="offset" begin="heart3.click" dur="1s"  fill="freeze" from="0" to="1" />
-                                    </stop>
-                                    <stop class="color2" offset="0" stop-color="#FFF">
-                                        <animate attributeName="offset" begin="heart3.click" dur="1s"  fill="freeze" from="0" to="1" />
-                                    </stop>
-                                </linearGradient>
-                            </defs>
-                            <path fill="url(#gradient3)" d="M340.8,98.4c50.7,0,91.9,41.3,91.9,92.3c0,26.2-10.9,49.8-28.3,66.6L256,407.1L105,251.6c-15.8-16.6-25.6-39.1-25.6-63.9 c0-51,41.1-92.3,91.9-92.3c38.2,0,70.9,23.4,84.8,56.8C269.8,121.9,302.6,98.4,340.8,98.4"/>
-                        </svg>
+                        <div class="restaurant__icon">
+                            <i class="fa-regular fa-heart"></i>
+                        </div>
                     </div>
                     <div class="restaurant">
                         <a class="restaurant__link" href="./restaurants/le-delice-des-sens.html">
@@ -160,19 +130,9 @@
                                 <h4 class="restaurant__text__subtitle">Folie-Méricourt</h4>
                             </div>
                         </a>
-                        <svg id="heart4" class='restaurant__icon' xmlns="http://www.w3.org/2000/svg" version="1.1" width="60" height="48" viewBox="0 0 500 500">
-                            <defs>
-                                <linearGradient id="gradient4" x1="0%" y1="100%" x2="0%" y2="0%">
-                                    <stop class="color1" offset="0" stop-color="#9356DC">
-                                        <animate attributeName="offset" begin="heart4.click" dur="1s"  fill="freeze" from="0" to="1" />
-                                    </stop>
-                                    <stop class="color2" offset="0" stop-color="#FFF">
-                                        <animate attributeName="offset" begin="heart4.click" dur="1s"  fill="freeze" from="0" to="1" />
-                                    </stop>
-                                </linearGradient>
-                            </defs>
-                            <path fill="url(#gradient4)" d="M340.8,98.4c50.7,0,91.9,41.3,91.9,92.3c0,26.2-10.9,49.8-28.3,66.6L256,407.1L105,251.6c-15.8-16.6-25.6-39.1-25.6-63.9 c0-51,41.1-92.3,91.9-92.3c38.2,0,70.9,23.4,84.8,56.8C269.8,121.9,302.6,98.4,340.8,98.4"/>
-                        </svg>
+                        <div class="restaurant__icon">
+                            <i class="fa-regular fa-heart"></i>
+                        </div>
                     </div>
                 </div>
             </section>
